# recipe_book

./: .env.template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  package-lock.json  package.json  pyproject.toml
accounts/: models.py
accounts/management/commands/: create_users.py  setup_roles.py
accounts/migrations/: 0001_initial.py  0002_profile_favorites.py
accounts/templates/registration/: logged_out.html  login.html
accounts/templatetags/: account_extras.py
mysite/: settings.py  urls.py
recipes/: admin.py  forms.py  helpers.py  models.py  urls.py  views.py
recipes/data/: seed_data.csv
recipes/management/commands/: seed_full.py  seed_two_recipes.py  setup_roles.py
recipes/migrations/: 0001_initial.py  0002_alter_recipe_complementary_alter_recipe_tags.py  0003_alter_stepingredient_quantity_and_more.py  0004_recipe_created_by_recipe_modified_by.py
recipes/static/recipes/css/: input.css  output.css
recipes/static/recipes/js/: recipe_create.js
recipes/templates/recipes/: base.html  index.html
recipes/templates/recipes/common/: _logout_form.html
recipes/templates/recipes/icons/: add.html  cancel.html  confirm.html  delete.html  edit.html  favorite.html  not_favorite.html  remove.html
recipes/templates/recipes/ingredient/: _create.html  _create_button.html  _create_button_oob.html  _edit.html  _list_item.html  create.html  edit.html  list.html
recipes/templates/recipes/recipe/: list.html  (+2 more)
recipes/templatetags/: recipe_extras.py
templates/: base.html
tests/: conftest.py  test_recipes_models.py  test_recipes_views.py
(+4 files in other folders)
